<resources>
    <string name="app_name">Notes</string>
    <string name="app_name_bold"><b>Notes</b></string>
    <string name="signIn"><b>Sign In</b></string>
    <string name="askAccount">Dont have an account?</string>
    <string name="createBtn">Create One</string>
    <string name="logIn">LOG IN</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="create_account_header"><b>Create new account</b></string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_empty_validation_toast">Please fill all the fields</string>
    <string name="register_valid_email_validation_toast">Please enter a valid email address</string>
    <string name="register_password_length_validation_toast">Password should have more than 8 characters</string>
    <string name="register_password_confirmation_validation_toast">Password Does not match</string>
    <string name="register_sign_up_complete">Sign-Up complete</string>
    <string name="register_email_exists_validation_toast">Email already Exists</string>
    <string name="login_email_or_password_wrong">Email or password is wrong</string>
    <string name="add_note">Add Note</string>
    <string name="add_a_note">Add a note</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="log_out">Logout</string>
    <string name="back_press_check">Click back again to exit</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="type">Start typing…</string>
    <string name="title_validation">Please add a title</string>
    <string name="delete">Delete</string>


</resources>